# jbs-ai

./: .gitignore  CLAUDE.md  README.md  package.json
.ai_jbs_context/docs/: briefing.md
.claude/: plan.md
ai_ctx/: POTENTIAL_ARCH.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
backend/app/: agent.py  config.py  host_tools.py  main.py  mcp_host.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/modules/: __init__.py
backend/app/modules/auth/: __init__.py  deps.py  oidc.py  router.py  schemas.py  session.py
backend/app/modules/chat/: __init__.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/data/: __init__.py  guard.py  router.py  service.py
backend/app/modules/platform/: __init__.py  repository.py  router.py
backend/app/modules/towers/: __init__.py  deps.py  live.py  plant.py  registry.py  router.py  sales.py  schemas.py
backend/app/providers/: __init__.py  base.py  claude.py  gemini.py  openai_compatible.py
backend/migrations/: env.py
backend/mocks/: mock_dbt_mcp.py  mock_snowflake_mcp.py  sample_data.py
backend/scripts/: smoke_mcp.py
backend/tests/: test_auth_and_data_guard.py  test_persistence.py
docs/: ARCHITECTURE.md  auth.md
frontend/: .prettierrc  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  routeTree.gen.ts  styles.css  types.ts
frontend/src/ai/: api.ts  types.ts  (+2 more)
(+183 files in other folders)
