[project]
name = "jbs-ai-backend"
version = "0.1.0"
description = "JBS AI Control Tower PoC — FastAPI MCP host + provider-agnostic agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.90",
    "google-genai>=1.0",
    "openai>=1.0",
    "mcp>=1.9",
    "pydantic-settings>=2.4",
    "duckdb>=1.1",
]

[tool.uv]
package = false
