[project]
name = "jbs-ai-backend"
version = "0.1.0"
description = "JBS AI Control Tower PoC — FastAPI MCP host + provider-agnostic agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.90",
    "google-genai>=1.0",
    "openai>=1.0",
    "mcp>=1.9",
    "pydantic-settings>=2.4",
    "duckdb>=1.1",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
